# papan

./: LICENSE  README.md  pyproject.toml
src/papan/: __init__.py  analyze.py  node.py  regression.py  tree.py  utils.py
tests/: test_node.py  test_packaging.py  test_tree.py  test_utils.py
tests/data/: paptrace.json
