[project]
name = "papan"
description = "Platform-agnostic performance analysis library."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Ian Dinwoodie", email = "dinwoodieian@gmail.com"}
]
keywords = ["papan", "tree", "performance", "analysis"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "anytree>=2.8.0",
  "gplearn>=0.4.2",
  "sympy>=1.12",
  "geppy>=0.1.3",
]

[project.urls]
repository = "https://github.com/paptools/papan"

[tool.black]
line-length = 80
preview = true
include = '\.pyi?$'
